@@ -36,7 +36,7 @@ function externalAssessmentDetails($guid,  $gibbonPersonID, $connection2, $gibbo
 	else {
 		while ($rowAssessments=$resultAssessments->fetch()) {
 			print "<h2>" ;
-			print _($rowAssessments["name"]) . " <span style='font-size: 75%; font-style: italic'>(" . substr($rowAssessments["date"], 0, 4) . ")</span>" ;
+			print _($rowAssessments["name"]) . " <span style='font-size: 75%; font-style: italic'>(" . substr(strftime('%B', mktime(0, 0, 0, substr($rowAssessments["date"], 5, 2))),0,3)  . " " . substr($rowAssessments["date"], 0, 4) . ")</span>" ;
 			if ($manage==TRUE) {
 				print "<a href='" . $_SESSION[$guid]["absoluteURL"] . "/index.php?q=/modules/" . $_SESSION[$guid]["module"] . "/externalAssessment_manage_details_edit.php&gibbonPersonID=$gibbonPersonID&gibbonExternalAssessmentStudentID=" . $rowAssessments["gibbonExternalAssessmentStudentID"] . "&search=$search&allStudents=$allStudents'><img style='margin-left: 5px' title='" . _('Edit Record') . "' src='./themes/" . $_SESSION[$guid]["gibbonThemeName"] . "/img/config.png'/></a> " ;
 				print "<a href='" . $_SESSION[$guid]["absoluteURL"] . "/index.php?q=/modules/" . $_SESSION[$guid]["module"] . "/externalAssessment_manage_details_delete.php&gibbonPersonID=$gibbonPersonID&gibbonExternalAssessmentStudentID=" . $rowAssessments["gibbonExternalAssessmentStudentID"] . "&search=$search&allStudents=$allStudents'><img title='" . _('Delete Record') . "' src='./themes/" . $_SESSION[$guid]["gibbonThemeName"] . "/img/garbage.png'/></a>" ;
